--- a/index.html
+++ b/index.html
@@ -185,9 +185,11 @@
             </div>
             <div class="projects">
                 <!-- 1st Project -->
+                <a href="https://sanskarsharma7777.github.io/MERN-INTERNSHIP" target="_blank">
                 <div class="project">
                     <i class="fa fa-coffee"></i>
-                    <h4>First Project</h4>
+                    <h4>BANNER TASK</h4>
+                </a>
                     
                 </div>
                 <!-- 2nd Project -->
