--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-------------------------- Home Page -------------------------->
     <div class="FirstElement" id="home">
         <div class="profile-photo">
-            <img src="files/WhatsApp Image 2024-01-26 at 11.55.57_4f41a0bb.jpg" alt="profile picture">
+            <img src="files/WhatsApp Image 2025-02-09 at 12.11.53_196c62cf.jpg" alt="profile picture">
         </div>
         <div class="profile-text">
             <h5>Hi I'm </h5><br>
@@ -58,9 +58,9 @@
 
             <div class="social">
                 <a href="mailto:sanskarsharmajio@gmail.com"><i class="fa fa-envelope"></i></a>
-                <a href=""><i class="fa-brands fa-github"></i></a>
+                <a href="https://github.com/SanskarSharma7777"><i class="fa-brands fa-github"></i></a>
                 <a href=""><i class="fa fa-code"></i></a>
-                <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                <a href="www.linkedin.com/in/sanskar-sharma-b9388a243"><i class="fa-brands fa-linkedin"></i></a>
             </div>
         </div>
     </div>
@@ -114,8 +114,17 @@
                                 <div class="timeline-item">
                                     <div class="circle-dot"></div>
                                     <h3 class="timeline-title">
-                                        DIMPLOMA EX-89%
+                                        HSC-59% 
                                     </h3>
+                                    <h4 class="timeline-title">HOLY SPIRIT CONVENT SENIOR SECONDARY SCHOOL </h4>
+                                    <h4 class="timeline-title">
+                                        <i class="fa fa-calendar"></i>  2017-2018
+                                    </h4>
+                                </div>
+                                <!-- Timeline-item -->
+                                <div class="timeline-item">
+                                    <div class="circle-dot"></div>
+                                    <h3 class="timeline-title">DIMPLOMA-89%</h3>
                                     <h4 class="timeline-title">ASM POLYTECHNIC </h4>
                                     <h4 class="timeline-title">
                                         <i class="fa fa-calendar"></i> 2018-2022
@@ -124,10 +133,10 @@
                                 <!-- Timeline-item -->
                                 <div class="timeline-item">
                                     <div class="circle-dot"></div>
-                                    <h3 class="timeline-title">HSC-59%</h3>
-                                    <h4 class="timeline-title">HOLY SPIRIT CONVENT SENIOR SECONDARY SCHOOL</h4>
+                                    <h3 class="timeline-title">BTECH - PURSUING</h3>
+                                    <h4 class="timeline-title">Shri Dadaji Institute of Technology & Science</h4>
                                     <h4 class="timeline-title">
-                                        <i class="fa fa-calendar"></i> 2017-2018
+                                        <i class="fa fa-calendar"></i> 2023-2026
                                     </h4>
                                 </div>
 
@@ -145,26 +154,35 @@
                                 <div class="timeline-item">
                                     <div class="circle-dot"></div>
                                     <h3 class="timeline-title">
-                                        FRONT END DEVELOPMENT
+                                        DATA ANALYSIS IN MS EXCEL AND POWER BI
                                     </h3>
-                                    <h4 class="timeline-title">DIGITAL COMPUTING</h4>
-                                    <h4 class="timeline-title">
-                                        <i class="fa fa-calendar"></i> 
-                                    </h4>
-                                    <li class="timeline-text">Proficient in DATA SCIENCE company, with expertise in Java, SQL, Git, and GitHub
-                                        .
-                                    </li>
-                                </div>
-                                <!-- Timeline-item -->
-                                <div class="timeline-item">
-                                    <div class="circle-dot"></div>
-                                    <h3 class="timeline-title">DATA ANALYSIS IN MS EXCEL AND POWER BI</h3>
                                     <h4 class="timeline-title">PRLAEE TECHNOLOGY</h4>
                                     <h4 class="timeline-title">
                                         <i class="fa fa-calendar"></i> 
                                     </h4>
                                     <li class="timeline-text">Engaged in a hands-on data analysis field, gaining hands-on experience and enhancing
-                                        skills.</li>
+                                        skills.
+                                    </li>
+                                </div>
+                                <!-- Timeline-item -->
+                                <div class="timeline-item">
+                                    <div class="circle-dot"></div>
+                                    <h3 class="timeline-title">FRONT END DEVELOPMENT </h3>
+                                    <h4 class="timeline-title">DIGITAL COMPUTING </h4>
+                                    <h4 class="timeline-title">
+                                        <i class="fa fa-calendar"></i> 
+                                    </h4>
+                                    <li class="timeline-text"> Proficient in DATA SCIENCE company, with expertise in Java, SQL, Git, and GitHub.</li>
+                                </div>
+                                <!-- Timeline-item -->
+                                <div class="timeline-item">
+                                    <div class="circle-dot"></div>
+                                    <h3 class="timeline-title">MERN STACK  </h3>
+                                    <h4 class="timeline-title">DIGITAL COMPUTING </h4>
+                                    <h4 class="timeline-title">
+                                        <i class="fa fa-calendar"></i> 
+                                    </h4>
+                                    <li class="timeline-text"> Proficient in DATA SCIENCE company, with expertise in Java, SQL, Git, and GitHub.</li>
                                 </div>
 
                             </div>
@@ -173,6 +191,27 @@
                 </div>
             </div>
         </div>
+        <div class="job">
+            <h3 class="title">JOB Experience</h3>
+            <div class="row">
+                <div class="timeline-box">
+                    <div class="timeline">
+
+                        <!-- Timeline-item -->
+                        <div class="timeline-item">
+                            <div class="circle-dot"></div>
+                            <h3 class="timeline-title">
+                                QUALITY ENGINEER
+                            </h3>
+                            <h4 class="timeline-title">HIAL GROUP OF BUS AC PVT. LTD. (2022-2023)</h4>
+                            <h4 class="timeline-title">
+                                <i class="fa fa-calendar"></i> 
+                            </h4>
+                            <li class="timeline-text">HIAL Bus AC & Interiors, supplied by Haiger India Air Conditioning Pvt. Ltd., offers air conditioners and bus interior services.
+                            </li>
+                        </div>
+                    </div>
+
     </section>
 
 
