--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 problem-solving, I am constantly seeking opportunities to learn and grow in this ever-evolving field</p>
 
             <div class="btn-group">
-                <a href="files/Resume.docx" class="btn   active">Download CV</a>
+                <a href="Resume.docx" class="btn   active">Download CV</a>
                 <a href="mailto:sanskarsharmajio@gmail.com" class="btn">Contact</a>
             </div>
 
