--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                 <div class="timeline-item">
                                     <div class="circle-dot"></div>
                                     <h3 class="timeline-title">
-                                        HSC-59% 
+                                        SSC-59% 
                                     </h3>
                                     <h4 class="timeline-title">HOLY SPIRIT CONVENT SENIOR SECONDARY SCHOOL </h4>
                                     <h4 class="timeline-title">
