updated little layout

--- a/index.html
+++ b/index.html
@@ -28,28 +28,27 @@
             <ul class="flex space-x-6">
                 <li><a href="#home" class="hover:text-secondary transition duration-300">Home</a></li>
                 <li><a href="#about" class="hover:text-secondary transition duration-300">About</a></li>
-                <li><a href="#education" class="hover:text-secondary transition duration-300">Education</a></li>
-                <li><a href="#internships" class="hover:text-secondary transition duration-300">Internships</a></li>
-                <li><a href="#work" class="hover:text-secondary transition duration-300">Work Experience</a></li>
                 <li><a href="#projects" class="hover:text-secondary transition duration-300">Projects</a></li>
                 <li><a href="#tasks" class="hover:text-secondary transition duration-300">Tasks</a></li>
+                <li><a href="#education" class="hover:text-secondary transition duration-300">Education</a></li>
+                <li><a href="#internships" class="hover:text-secondary transition duration-300">Internships</a></li>
+                <li><a href="#work-experience" class="hover:text-secondary transition duration-300">Work Experience</a></li>
                 <li><a href="#contact" class="hover:text-secondary transition duration-300">Contact</a></li>
             </ul>
         </div>
     </nav>
     
     <!-- Hero Section -->
-    <section id="home" class="h-screen flex flex-col justify-center items-center text-center bg-gradient-to-b from-black to-gray-900 text-white p-10">
+    <section id="home" class="h-screen flex flex-col justify-center items-center text-center bg-gradient-to-b from-black to-gray-900 text-white p-10" style="background-image: url('path_to_your_image.jpg'); background-size: cover; background-position: center;">
         <h1 class="text-6xl font-extrabold">Hello, I'm <span class="text-accent">Sanskar Sharma</span></h1>
         <p class="mt-6 text-2xl">A Professional Front-End Developer</p>
-        <button class="mt-6 bg-accent text-gray-900 px-6 py-3 rounded-full text-lg font-bold shadow-lg hover:bg-yellow-400 transition duration-300">View My Work</button>
     </section>
 
     <!-- About Section -->
     <section id="about" class="py-20 bg-gray-900 text-center">
         <div class="container mx-auto">
             <h2 class="text-4xl font-bold text-white mb-10">About Me</h2>
-            <p class="max-w-3xl mx-auto text-lg text-gray-400">I am a passionate front-end developer specializing in modern UI/UX designs, interactive web applications, and smooth animations.</p>
+            <p class="text-lg text-gray-400 max-w-2xl mx-auto">I am a passionate front-end developer with experience in creating beautiful and functional user interfaces. I specialize in modern web technologies and love bringing ideas to life through design and code.</p>
         </div>
     </section>
 
@@ -57,177 +56,76 @@
     <section id="education" class="py-20 bg-gray-800 text-center">
         <div class="container mx-auto">
             <h2 class="text-4xl font-bold text-white mb-10">Education</h2>
-            <div class="max-w-3xl mx-auto text-lg text-gray-400">
-                <div class="border-l-4 border-secondary pl-4 mb-6">
-                    <h3 class="text-xl font-semibold">SSC - 59% (2018)</h3>
-                    <p>Holy Spirit Convent Senior Secondary School, Khandwa Madhya Pradesh</p>
-                </div>
-                <div class="border-l-4 border-secondary pl-4 mb-6">
-                    <h3 class="text-xl font-semibold">Diploma in Electrical Engineering (2019-2022)- (8.7 cpga upto 6TH sem)</h3>
-                    <p>ASM Polytechnic College , Mathura Uttar Pradesh</p>
-                </div>
-                <div class="border-l-4 border-secondary pl-4 mb-6">
-                    <h3 class="text-xl font-semibold">Bachelor’s Degree in Data Science - Pursuing</h3>
-                    <p>Shree Dada Ji Instiute of Technology & Science - 2023 to 2026</p>
-                </div>
-            </div>
+            <ul class="text-lg text-gray-400 list-disc list-inside">
+                <li>Bachelor of Technology (B.Tech) in Data Science - Shree Dada Ji Institute of Technology & Science (2023-2026)</li>
+            </ul>
         </div>
-    </section>
-
-    <!-- Internships Section -->
-    <section id="internships" class="py-20 bg-gray-900 text-center">
         <div class="container mx-auto">
-            <h2 class="text-4xl font-bold text-white mb-10">Internships</h2>
-            <div class="max-w-3xl mx-auto text-lg text-gray-400">
-                <div class="border-l-4 border-secondary pl-4 mb-6">
-                    <h3 class="text-xl font-semibold">Data Analysis In MS Excel & Power BI</h3>
-                    <p>Pralee Technology</p>
-                </div>
-                <div class="border-l-4 border-secondary pl-4 mb-6">
-                    <h3 class="text-xl font-semibold">Frontend Developer Intern</h3>
-                    <p>Digital Computing</p>
-                </div>
-                <div class="border-l-4 border-secondary pl-4 mb-6">
-                    <h3 class="text-xl font-semibold">Mern Stack Developer Intern</h3>
-                    <p>Digital Computing - Pursuing</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Work Experience Section -->
-    <section id="work" class="py-20 bg-gray-800 text-center">
-        <div class="container mx-auto">
-            <h2 class="text-4xl font-bold text-white mb-10">Work Experience</h2>
-            <div class="max-w-3xl mx-auto text-lg text-gray-400">
-                <div class="border-l-4 border-secondary pl-4 mb-6">
-                    <h3 class="text-xl font-semibold">Engineer Trainee & Quality Engineer</h3>
-                    <p>Hial Group of Bus AC- May 2022 to August 2023</p>
-                </div>
-            </div>
+            <ul class="text-lg text-gray-400 list-disc list-inside">
+                <li>Diploma  in Electrical Engineering - ASM Polytechnic College (2019-2022)</li>
+            </ul>
         </div>
     </section>
 
     <!-- Projects Section -->
-    <section id="projects" class="py-20 bg-gray-900 text-center">
+    <section id="projects" class="py-20 bg-gray-800 text-center">
         <div class="container mx-auto">
             <h2 class="text-4xl font-bold text-white mb-10">Projects</h2>
-            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
-                <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
-                    <h3 class="text-xl font-semibold text-accent">Project One</h3>
-                    <p class="text-gray-400 mt-4">Description of the project goes here. What technologies were used and what problem it solves.</p>
-                    <a href="#" class="text-secondary hover:text-accent mt-4 inline-block">View Project</a>
-                </div>
-                <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
-                    <h3 class="text-xl font-semibold text-accent">Project Two</h3>
-                    <p class="text-gray-400 mt-4">Description of the project goes here. What technologies were used and what problem it solves.</p>
-                    <a href="#" class="text-secondary hover:text-accent mt-4 inline-block">View Project</a>
-                </div>
-                <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
-                    <h3 class="text-xl font-semibold text-accent">Project Three</h3>
-                    <p class="text-gray-400 mt-4">Description of the project goes here. What technologies were used and what problem it solves.</p>
-                    <a href="#" class="text-secondary hover:text-accent mt-4 inline-block">View Project</a>
-                </div>
-            </div>
+            <p class="text-lg text-gray-400 mb-6">Here are some projects I have worked on:</p>
+            <ul class="text-lg text-gray-400 list-disc list-inside">
+                <li>Portfolio Website - Showcasing my work and experience</li>
+                <li>Pralee Technology Clone - Created Replica of Pralee Technology Website</li>
+                <li>Expense Management Tool - A expense-based tracker application</li>
+                <li>TODO List - A list where we can add our daily tasks</li>
+            </ul>
         </div>
     </section>
 
     <!-- Tasks Section -->
-    <section id=
+    <section id="tasks" class="py-20 bg-gray-900 text-center">
         <div class="container mx-auto">
-            <div class="ml-3 mt-4 flex md:flex-col">
-                <div class="flex flex-col md:flex-row mt-3 justify-between md:gap-6 md: mb-6 col-span-8">
-                    <p onclick="opentab(event, 'webdesign')" class="tablink activelink lg:border-2 hover:border-blue-500 text-blue-700 font-bold md:bg-blue-300 md:rounded-2xl lg:border-solid lg:border-gray-300 p-3">Web Development</p>
-                    <p onclick="opentab(event, 'frontend')" class="tablink lg:border-2 hover:border-blue-500 text-blue-700 font-bold md:bg-blue-300 md:rounded-2xl lg:border-solid lg:border-gray-300 p-3">Frontend Development</p>
-                    <p onclick="opentab(event, 'reactjs')" class="tablink lg:border-2 hover:border-blue-500 text-blue-700 font-bold md:bg-blue-300 md:rounded-2xl lg:border-solid lg:border-gray-300 p-3">React</p>
-                    <p onclick="opentab(event, 'nodejs')" class="tablink lg:border-2 hover:border-blue-500 text-blue-700 font-bold md:bg-blue-300 md:rounded-2xl lg:border-solid lg:border-gray-300 p-3">NodeJS</p>
-                    <p onclick="opentab(event, 'expressjs')" class="tablink lg:border-2 hover:border-blue-500 text-blue-700 font-bold md:bg-blue-300 md:rounded-2xl lg:border-solid lg:border-gray-300 p-3">ExpressJS</p>
-                    <p onclick="opentab(event, 'mangodb')" class="tablink lg:border-2 hover:border-blue-500 text-blue-700 font-bold md:bg-blue-300 md:rounded-2xl lg:border-solid lg:border-gray-300 p-3">Mangodb</p>
-                    <p onclick="opentab(event, 'mernstack')" class="tablink lg:border-2 hover:border-blue-500 text-blue-700 font-bold md:bg-blue-300 md:rounded-2xl lg:border-solid lg:border-gray-300 p-3">MERN STACK</p>
-                </div>
-                <div class="mt-6 ml-8">
-                    <!-- Tab Contents -->
-                    <div class="tabcontent" id="webdesign" style="display: none;"></div>
-                        <ul style="list-style-type: disc;">
-                            <a href="day1/day1.html"><li class="text-blue-400">Banner</li></a>
-                            <a href="day2/day2.html"><li class="text-blue-400">Intro Page</li></a>
-                            <a href="day3/day3.html"><li class="text-blue-400">Pralee Technology</li></a>
-                        </ul>
-                    </div>
-                    <div class="tabcontent" id="frontend">
-                        <ul style="list-style-type: disc;">
-                            <a href=""><li class="text-blue-400">FE1</li></a>
-                            <a href=""><li class="text-blue-400">FE2</li></a>
-                        </ul>
-                    </div>
-                    <div class="tabcontent" id="reactjs">
-                        <ul style="list-style-type: disc;">
-                            <a href=""><li class="text-blue-400">RJS1</li></a>
-                        </ul>
-                    </div>
-                    <div class="tabcontent" id="nodejs">
-                        <ul style="list-style-type: disc;">
-                            <a href=""><li class="text-blue-400">NJS1</li></a>
-                            <a href=""><li class="text-blue-400">NJS2</li></a>
-                        </ul>
-                    </div>
-                    <div class="tabcontent" id="expressjs">
-                        <ul style="list-style-type: disc;">
-                            <a href=""><li class="text-blue-400">EJS1</li></a>
-                            <a href=""><li class="text-blue-400">EJS2</li></a>
-                        </ul>
-                    </div>
-                    <div class="tabcontent" id="mangodb">
-                        <ul style="list-style-type: disc;">
-                            <a href=""><li class="text-blue-400">MDB1</li></a>
-                            <a href=""><li class="text-blue-400">MDB2</li></a>
-                        </ul>
-                    </div>
-                    <div class="tabcontent" id="mernstack">
-                        <ul style="list-style-type: disc;">
-                            <a href=""><li class="text-blue-400">MERN1</li></a>
-                            <a href=""><li class="text-blue-400">MERN2</li></a>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </section>
+            <h2 class="text-4xl font-bold text-white mb-10">Tasks</h2>
+            <ul class="text-lg text-gray-400 list-disc list-inside">
+                <li><a href="#web-design" class="text-accent hover:underline">Web Design</a></li>
+                <li><a href="#front-end" class="text-accent hover:underline">Front-End Development</a></li>
+                <li><a href="#react" class="text-accent hover:underline">React.js</a></li>
+                <li><a href="#express" class="text-accent hover:underline">Express.js</a></li>
+                <li><a href="#node" class="text-accent hover:underline">Node.js</a></li>
+                <li><a href="#mongodb" class="text-accent hover:underline">MognoDB</a></li>
+            </ul>
+        </div>
+    </section>
 
-        <!-- Contact Section -->
-        <section id="contact" class="py-20 bg-gray-900 text-center">
-            <div class="container mx-auto">
-                <h2 class="text-4xl font-bold text-white mb-10">Contact</h2>
-                <p class="text-lg text-gray-400 mb-6">Feel free to reach out to me for any inquiries, collaboration opportunities, or just a friendly chat!</p>
-                <a href="mailto:sanskarsharmajio@gmail.com" class="bg-accent text-gray-900 px-8 py-4 rounded-full text-lg font-bold shadow-lg hover:bg-yellow-400 transition duration-300">Contact Me</a>
-            </div>
-        </section>
+    <!-- Internships Section -->
+    <section id="internships" class="py-20 bg-gray-800 text-center">
+        <div class="container mx-auto">
+            <h2 class="text-4xl font-bold text-white mb-10">Internships</h2>
+            <ul class="text-lg text-gray-400 list-disc list-inside">
+                <li>Data Analysis with Power Bi (Pralee Technology)</li>
+                <li>Frontend Developer (Digital Computing)</li>
+                <li>MERN STACK Developer - Pursuing (Digital Computing)</li>
+            </ul>
+        </div>
+    </section>
 
-    <script>
-        // Smooth scrolling with enhanced effects
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                document.querySelector(this.getAttribute('href')).scrollIntoView({
-                    behavior: 'smooth',
-                    block: 'start'
-                });
-            });
-        });
+    <!-- Work Experience Section -->
+    <section id="work-experience" class="py-20 bg-gray-900 text-center">
+        <div class="container mx-auto">
+            <h2 class="text-4xl font-bold text-white mb-10">Work Experience</h2>
+            <ul class="text-lg text-gray-400 list-disc list-inside">
+                <li>Engineer Trainee at Hial Group of Bus AC(May 2022 - September 2023)</li>
+                <li></li>
+            </ul>
+        </div>
+    </section>
 
-        // Tab functionality
-        function opentab(evt, tabName) {
-            var i, tabcontent, tablinks;
-            tabcontent = document.getElementsByClassName("tabcontent");
-            for (i = 0; i < tabcontent.length; i++) {
-                tabcontent[i].style.display = "none";
-            }
-            tablinks = document.getElementsByClassName("tablink");
-            for (i = 0; i < tablinks.length; i++) {
-                tablinks[i].classList.remove("activelink");
-            }
-            document.getElementById(tabName).style.display = "block";
-            evt.currentTarget.classList.add("activelink");
-        }
-    </script>
+    <!-- Contact Section -->
+    <section id="contact" class="py-20 bg-gray-900 text-center">
+        <div class="container mx-auto">
+            <h2 class="text-4xl font-bold text-white mb-10">Contact</h2>
+            <p class="text-lg text-gray-400 mb-6">Feel free to reach out to me for any inquiries, collaboration opportunities, or just a friendly chat!</p>
+            <a href="mailto:sanskarsharmajio@gmail.com" class="bg-accent text-gray-900 px-8 py-4 rounded-full text-lg font-bold shadow-lg hover:bg-yellow-400 transition duration-300">Contact Me</a>
+        </div>
+    </section>
 </body>
 </html>
