--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
             <h2 class="text-4xl font-semibold text-white mb-10">Projects</h2>
             <p class="text-lg text-gray-400 mb-6">Here are some projects I have worked on:</p>
             <ul class="text-lg text-gray-400 list-disc list-inside">
-                <li>Portfolio Website - Showcasing my work and experience</li>
+                <li><a href="https://sanskarsharmaportfolio.netlify.app/" class="text-accent hover:underline">Portfolio Website - Showcasing my work and experience</li></a>
                 <li>Pralee Technology Clone - Created a replica of Pralee Technology Website</li>
                 <li>Expense Management Tool - A budget and expense tracking application</li>
-                <li><a href="https://sanskarsharmatodo.netlify.app">TODO List - A simple task management tool</li></a>
-                <li><a href="https://sanskardashboard.netlify.app/">ERP Dashboard</li></a>
-                <li><a href="https://sanskarcontactapp.netlify.app/">Contact App</li></a>
+                <li><a href="https://sanskarsharmatodo.netlify.app" class="text-accent hover:underline">TODO List - A simple task management tool</li></a>
+                <li><a href="https://sanskardashboard.netlify.app/"class="text-accent hover:underline">ERP Dashboard</li></a>
+                <li><a href="https://sanskarcontactapp.netlify.app/"class="text-accent hover:underline">Contact App</li></a>
             </ul>
         </div>
     </section>
